--- a/package.json
+++ b/package.json
@@ -17,7 +17,38 @@
   },
   "homepage": "https://github.com/chumpon-asaneerat/node.experiments#readme",
   "dependencies": {
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.3.0"
+    "@types/gulp-debug": "^2.0.31",
+    "@types/gulp-insert": "^0.5.7",
+    "@types/gulp-sort": "0.0.32",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "debug": "^4.1.1",
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.0",
+    "express-serve-static-core": "^0.1.1",
+    "find": "^0.2.9",
+    "formidable": "^1.2.1",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.7.0",
+    "gulp-debug": "^4.0.0",
+    "gulp-insert": "^0.5.0",
+    "gulp-riot": "^1.1.5",
+    "gulp-sass": "^4.0.2",
+    "gulp-sort": "^2.0.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify-es": "^1.0.4",
+    "gulp-watch": "^5.0.1",
+    "helmet": "^3.15.0",
+    "jest": "^23.6.0",
+    "jsonwebtoken": "^8.4.0",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.23.0",
+    "morgan": "^1.9.1",
+    "mssql": "^4.3.0",
+    "riot": "^3.13.2",
+    "serve-favicon": "^2.5.0",
+    "serve-static": "^1.13.2"
   }
 }
